# fastspec

./: .gitignore  CHANGELOG.md  README.md  cachy.jsonl  pyproject.toml
fastspec/: _modidx.py  errors.py  oapi.py  spec.py  sse.py  transport.py  types.py
nbs/: 00_errors.ipynb  01_sse.ipynb  02_transport.ipynb  03_spec.ipynb  04_oapi.ipynb  index.ipynb  nbdev.yml
specs/: gemini.json  openapi_docs.ipynb  spec_manifest.json
