[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastspec"
dynamic = ["version"]
description = "Dynamic OpenAPI and discovery spec client for Python — turn any API spec into a fully-typed async client with attribute chaining, streaming, and file uploads"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Kerem Turgutlu", email = "keremturgutlu@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastspec"
Documentation = "https://AnswerDotAI.github.io/fastspec/"

[project.entry-points.nbdev]
fastspec = "fastspec._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastspec.__version__"}

[tool.setuptools.packages.find]
include = ["fastspec"]

[tool.nbdev]
